--- a/config.toml
+++ b/config.toml
@@ -54,17 +54,17 @@ paginatePath = "page"
     switchlang = false
 
     # You can use markdown here.
-    BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
-    brand = "Appernetic blog" # brand image alt text.
-    topline = "few words about your site"
+    BrandImage = "http://vatlab.github.io/sos-docs/img/sos_icon.svg"
+    brand = "vatlab blog" # brand image alt text.
+    topline = ""
     footline = "code with <i class='fa fa-heart'></i>"
 
     # Show a sidebar menu
-    showRightSidebar = true
+    showRightSidebar = false
 
     # Text for the top menu link, which goes the root URL for the site.
     # Default (if omitted) is "Home".
-    home = "home"
+    home = "Home"
 
     mailmunchid = "" # Mailmunch site id
     sumomeid = "" # Sumome id
@@ -77,14 +77,14 @@ paginatePath = "page"
     googleAnalytics = "Your Google Analytics tracking code"
 
     # Sidebar social links.
-    github = "enten/hugo-boilerplate" # Your Github profile ID
-    bitbucket = "" # Your Bitbucket profile ID
-    linkedin = "" # Your LinkedIn profile ID (from public URL)
-    googleplus = "" # Your Google+ profile ID
-    facebook = "" # Your Facebook profile ID
-    twitter = "" # Your Twitter profile ID
-    youtube = ""  # Your Youtube channel ID
-    flattr = ""  # populate with your flattr uid
+    github = "BoPeng"
+    #bitbucket = "" # Your Bitbucket profile ID
+    #linkedin = "" # Your LinkedIn profile ID (from public URL)
+    #googleplus = "" # Your Google+ profile ID
+    #facebook = "" # Your Facebook profile ID
+    #twitter = "" # Your Twitter profile ID
+    #youtube = ""  # Your Youtube channel ID
+    #flattr = ""  # populate with your flattr uid
 
 [blackfriday]
     angledQuotes = true
@@ -113,8 +113,9 @@ paginatePath = "page"
     [Languages]
     [Languages.en]
     weight = 1
-    copyright = "(c) 2016 Copyright my blog"
-    title = "My blog" # Site title
+    copyright = "(c) 2018 Copyright Bo Peng"
+    title = "vatlab blog" # Site title
+
     [[Languages.en.menu.main]]
     name = "Blog"
     pre = ""
@@ -126,14 +127,8 @@ paginatePath = "page"
     name = "About"
     weight = 1
     identifier = ""
-    url = "https://appernetic.io/app/#/about"
+    url = "/about/"
     pre = "<i class='fa fa-road'></i>"
-
-    [[Languages.en.menu.main]]
-    name = "Dashboard"
-    identifier = ""
-    weight = 3
-    url = "https://appernetic.io/app/"
 
     [[Languages.en.menu.footer]] # add  links to the bottom right corner.
     name = "Disclaimer"
@@ -148,35 +143,6 @@ paginatePath = "page"
     weight = 2
     url = "/terms/"
 
-    [Languages.sv]
-    weight = 2
-    title = "Min blog" # Site title
-    copyright = "(c) 2016 Alla rättigheter"
-
-    [[Languages.sv.menu.main]]
-    name = "Bloggen"
-    pre = ""
-    weight = 2
-    identifier = "post"
-    url = "/sv/post/"
-
-    [[Languages.sv.menu.footer]] # add  links to the bottom right corner.
-    name = "Ansvarsfriskrivning"
-    pre = "<i>&middot;</i>"
-    identifier = "friskrivning"
-    weight = 1
-    url = "/sv/friskrivning/"
-
-    [[Languages.sv.menu.footer]]
-    name = "Vilkor"
-    identifier = "vilkor"
-    weight = 2
-    url = "/sv/vilkor/"
-
-
-    [Languages.sv.taxonomies]
-    tag = "Taggar"
-    topic = "Ämne"
 
 [[menu.main]]
 name = "Blog"
