--- a/config.toml
+++ b/config.toml
@@ -5,149 +5,14 @@ publishDir = 'docs'
 
 canonifyurls = true
 metaDataFormat = "toml"
-theme = "hugo-bootstrap-premium"
+theme = "hugo-theme-blueberry-detox"
 
-# Pagination
-paginate = 10
-paginatePath = "page"
-
-[permalinks]
-    post = "/:year/:month/:day/:filename/"
-    code = "/:filename/"
 
 [taxonomies]
-    tag = "tags"
-    topic = "topics"
-
-[author]
-    name = "Bo Peng"
-    email = "bpeng@mdanderson.org"
-
-
-[params.theme]
-  name = "paper"
-
-[params.popover]
-  # This is a highly configurable popover form.
-  enablepopover = false #enable or disable popover: true/false.
-  posturl = "https://zapier.com/hooks/..."
-  headerimage = "//placehold.it/1000x600"
-  expirecookie = 5 #show it again after number of days to visitor that has not subscribed.
-  cookiename = "mycookie1" #give the cookie a unique name variable (avoid spaces and strange characters).
-  signupheader = "Join Our Newsletter"
-  showmodaltimeout = 10000 #show popover modal after time interval in milliseconds.
-  mouseleave = true #show popover when mouse leaves window: true/false.
-  modalsize = "" #lg or sm. Empty is md. If phone is detected lg is used.
-  imagedescription = "Placeholder image for this popover modal optin form"
-  signuptext = "Signup today for free and be the first to get notified on new updates."
-  inputplaceholder = "Enter your email"
-  submitbutton = "Subscribe"
-  successmessage = "Thanks for your subscription!"
-  errormessage = "Submitting form failed!"
-  optin = true #opt-in: true/false
+tag = "tags"
 
 [params]
-    # menu for changing language. This changes languages with js and stores the choice with the help
-    # of JavaScript in a Cookie. Then the path is rewritten with pathnamereplace.js. The name of the
-    # md files needs to have the same name for each language abbreviation to work correctly. Example:
-    # showcase.en.md and showcase.sv.md. It only works if DefaultContentLanguageInSubdir = true
-    switchlang = false
-
-    # You can use markdown here.
-    BrandImage = "http://vatlab.github.io/sos-docs/img/sos_icon.svg"
-    brand = "vatlab blog" # brand image alt text.
-    topline = ""
-    footline = "code with <i class='fa fa-heart'></i>"
-
-    # Show a sidebar menu
-    showRightSidebar = false
-
-    # Text for the top menu link, which goes the root URL for the site.
-    # Default (if omitted) is "Home".
-    home = "Home"
-
-    mailmunchid = "" # Mailmunch site id
-    sumomeid = "" # Sumome id
-
-    # Select a syntax highight.
-    # Check the static/css/highlight directory for options.
-    highlight = "default"
-
-    # Google Analytics.
-    googleAnalytics = "Your Google Analytics tracking code"
-
-    # Sidebar social links.
-    github = "BoPeng"
-    #bitbucket = "" # Your Bitbucket profile ID
-    #linkedin = "" # Your LinkedIn profile ID (from public URL)
-    #googleplus = "" # Your Google+ profile ID
-    #facebook = "" # Your Facebook profile ID
-    #twitter = "" # Your Twitter profile ID
-    #youtube = ""  # Your Youtube channel ID
-    #flattr = ""  # populate with your flattr uid
-
-[blackfriday]
-    angledQuotes = true
-    fractions = false
-    hrefTargetBlank = false
-    latexDashes = true
-    plainIdAnchors = true
-    extensions = []
-    extensionmask = []
-
-    # Menus
-    # If you want active menu items highlighted for internal pages don't add them here, they need to be added in each files front matter.
-    # like this:
-    #[menu]
-    #     [menu.main]
-    #        name = "Showcase"
-    #        weight = 3
-    #        identifier = "showcase"
-    # i18n menus. A menu will be added for each language to the right in the top menu. This menu will switch to the selected language. Remember to add the corresponding language in pathnamereplace.js.
-    #[[Languages.sv.menu.switchlang]]
-    #  name = "English"
-    #  identifier = ""
-    #  weight = 4
-    #  url = "en"
-
-    [Languages]
-    [Languages.en]
-    weight = 1
-    copyright = "(c) 2018 Copyright Bo Peng"
-    title = "vatlab blog" # Site title
-
-    [[Languages.en.menu.main]]
-    name = "Blog"
-    pre = ""
-    weight = 2
-    identifier = "post"
-    url = "/post/"
-
-    [[Languages.en.menu.main]]
-    name = "About"
-    weight = 1
-    identifier = ""
-    url = "/about/"
-    pre = "<i class='fa fa-road'></i>"
-
-    [[Languages.en.menu.footer]] # add  links to the bottom right corner.
-    name = "Disclaimer"
-    pre = "<i>&middot;</i>"
-    identifier = "disclaimer"
-    weight = 1
-    url = "/disclaimer/"
-
-    [[Languages.en.menu.footer]]
-    name = "Terms"
-    identifier = "terms"
-    weight = 2
-    url = "/terms/"
-
-
-[[menu.main]]
-name = "Blog"
-pre = ""
-weight = 1
-identifier = "post"
-url = "/post/"
-
+ author = "Bo Peng"
+ description = "Bo Peng, MD Anderson Cancer Center/Assistant Professor"
+ twitter = "ScriptOfScripts"
+ github = "BoPeng"
